--- a/.env.development
+++ b/.env.development
@@ -1,14 +1,14 @@
-NEXT_PUBLIC_CHAIN_ID = "32520"
+NEXT_PUBLIC_CHAIN_ID = "1116"
 NEXT_PUBLIC_GTAG = "GTM-PXLD3XW"
 
 # 10+ nodes balanced, US/EU
-NEXT_PUBLIC_NODE_1 = "https://serverrpc.com"
+NEXT_PUBLIC_NODE_1 = "https://rpc.coredao.org/"
 
 # 10+ nodes balanced, US/EU
-NEXT_PUBLIC_NODE_2 = "https://serverrpc.com"
+NEXT_PUBLIC_NODE_2 = "https://rpc.coredao.org/"
 
 # 10+ nodes balanced in each region, global
-NEXT_PUBLIC_NODE_3 = "https://serverrpc.com"
+NEXT_PUBLIC_NODE_3 = "https://rpc.coredao.org/"
 
 NEXT_PUBLIC_NODE_PRODUCTION = ""
 
