--- a/.env.production
+++ b/.env.production
@@ -1,14 +1,14 @@
-NEXT_PUBLIC_CHAIN_ID = "32520"
+NEXT_PUBLIC_CHAIN_ID = "1116"
 REACT_APP_GTAG = "GTM-TLF66T4"
 
 # 10+ nodes balanced, US/EU
-NEXT_PUBLIC_NODE_1 = "https://serverrpc.com"
+NEXT_PUBLIC_NODE_1 = "https://rpc.coredao.org/"
 
 # 10+ nodes balanced, US/EU
-NEXT_PUBLIC_NODE_2 = "https://serverrpc.com"
+NEXT_PUBLIC_NODE_2 = "https://rpc.coredao.org/"
 
 # 10+ nodes balanced in each region, global
-NEXT_PUBLIC_NODE_3 = "https://serverrpc.com"
+NEXT_PUBLIC_NODE_3 = "https://rpc.coredao.org/"
 
 # Google Cloud Infrastructure Endpoint - Global
 NEXT_PUBLIC_NODE_PRODUCTION = ""
